--- a/apps/dashboard/app/scss/components/_policies.scss
+++ b/apps/dashboard/app/scss/components/_policies.scss
@@ -42,7 +42,7 @@
       background-color: #ffffff;
       border: 1px solid #e5e5e5;
       border-radius: 4px;
-      overflow: hidden;
+      overflow-x: auto;
     }
 
     &__empty,
@@ -56,7 +56,7 @@
     &__question,
     &__answer {
       max-width: 300px;
-      overflow: hidden;
+      overflow-x: auto;
       text-overflow: ellipsis;
       white-space: nowrap;
       cursor: help;
